--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,50 @@
+# Dependencies
 node_modules/
-node_modules/
+.pnp
+.pnp.js
+
+# Next.js build files
+.next/
+out/
+build/
+dist/
+
+# Development
+.env.local
+.env.*.local
+.cache
+
+# OS files
+.DS_Store
+.AppleDouble
+.LSOverride
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+.coverage
+.nyc_output
+
+# Misc
+*.pem
+.env
+.env.example
