--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "typecheck": "tsc --noEmit",
+    "audit": "pnpm audit --audit-level=high || true",
+    "check": "pnpm install --frozen-lockfile && pnpm run audit && pnpm run typecheck && pnpm run lint && pnpm run build"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -49,7 +52,7 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.5.4",
+  "next": "^15.5.5",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-day-picker": "9.8.0",
@@ -66,11 +69,16 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
+  ,
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "packageManager": "pnpm@8.8.1"
 }
